--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,13 @@
+<mat-form-field>
+  <mat-label>Select a city</mat-label>
+  <mat-select [formControl]="selectedCity">
+    <mat-option
+      *ngFor="let city of cities"
+      [value]="city">
+      {{ city }}
+    </mat-option>
+  </mat-select>
+</mat-form-field>
 <div
   class="wrapper"
   *ngIf="forecastResponse; else loading">
