--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,10 +8,16 @@
     </mat-option>
   </mat-select>
 </mat-form-field>
-<mat-button-toggle-group #group="matButtonToggleGroup" value="celsius">
-  <mat-button-toggle value="celsius"> °C </mat-button-toggle>
-  <mat-button-toggle value="fahrenheit"> °F </mat-button-toggle>
+
+<mat-button-toggle-group
+  #group="matButtonToggleGroup"
+  value="{{ degreeTypes.Celsius }}">
+  <mat-button-toggle value="{{ degreeTypes.Celsius }}"> °C </mat-button-toggle>
+  <mat-button-toggle value="{{ degreeTypes.Fahrenheit }}">
+    °F
+  </mat-button-toggle>
 </mat-button-toggle-group>
+
 <div
   class="wrapper"
   *ngIf="forecastResponse; else loading">
@@ -23,16 +29,12 @@
         {{
           (forecast.dt + forecastResponse.city.timezone) * 1000 | date : 'HH:mm'
         }}
-        GMT+{{ forecastResponse.city.timezone / 3600 }}
       </p>
       <p class="temp">
         {{
-          (group.value === 'fahrenheit'
-            ? (forecast.main.temp * 9) / 5 + 32
-            : forecast.main.temp
-          ) | number : '1.0-1'
+          displayTemperature(forecast.main.temp, group.value) | number : '1.0-1'
         }}
-        {{ group.value === 'fahrenheit' ? '°F' : '°C' }}
+        {{ group.value === degreeTypes.Fahrenheit ? '°F' : '°C' }}
       </p>
     </mat-card-header>
     <mat-card-content>
@@ -46,5 +48,4 @@
     </mat-card-content>
   </mat-card>
 </div>
-
-<ng-template #loading>Content to render when condition is false.</ng-template>
+<ng-template #loading><mat-spinner></mat-spinner></ng-template>
