--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,23 +1,28 @@
-<mat-form-field>
-  <mat-label>Select a city</mat-label>
-  <mat-select [formControl]="selectedCity">
-    <mat-option
-      *ngFor="let city of cities"
-      [value]="city">
-      {{ city }}
-    </mat-option>
-  </mat-select>
-</mat-form-field>
+<div class="actions">
+  <mat-form-field>
+    <mat-label>Select a city</mat-label>
+    <mat-select [formControl]="selectedCity">
+      <mat-option
+        *ngFor="let city of cities"
+        [value]="city">
+        {{ city }}
+      </mat-option>
+    </mat-select>
+  </mat-form-field>
 
-<mat-button-toggle-group
-  #group="matButtonToggleGroup"
-  value="{{ degreeTypes.Celsius }}">
-  <mat-button-toggle value="{{ degreeTypes.Celsius }}"> °C </mat-button-toggle>
-  <mat-button-toggle value="{{ degreeTypes.Fahrenheit }}">
-    °F
-  </mat-button-toggle>
-</mat-button-toggle-group>
-
+  <mat-button-toggle-group
+    class="toggle-btn"
+    #group="matButtonToggleGroup"
+    value="{{ degreeTypes.Celsius }}">
+    <mat-button-toggle value="{{ degreeTypes.Celsius }}">
+      °C
+    </mat-button-toggle>
+    <mat-button-toggle value="{{ degreeTypes.Fahrenheit }}">
+      °F
+    </mat-button-toggle>
+  </mat-button-toggle-group>
+</div>
+<h1 class="title">{{ selectedCity.value }}</h1>
 <div
   class="wrapper"
   *ngIf="forecastResponse; else loading">
@@ -37,10 +42,16 @@
         {{ group.value === degreeTypes.Fahrenheit ? '°F' : '°C' }}
       </p>
     </mat-card-header>
-    <mat-card-content>
-      <p class="wind">Вітер {{ forecast.wind.speed }}м/сек</p>
-      <p class="humidity">Вологість {{ forecast.main.humidity }}%</p>
-      <div class="description">
+    <mat-card-content class="card-body">
+      <div class="desc-piece">
+        <mat-icon>near_me</mat-icon>
+        <p class="wind">Вітер {{ forecast.wind.speed }}м/сек</p>
+      </div>
+      <div class="desc-piece">
+        <mat-icon>opacity</mat-icon>
+        <p class="humidity">Вологість {{ forecast.main.humidity }}%</p>
+      </div>
+      <div class="description desc-piece">
         <span *ngFor="let weather of forecast.weather">{{
           weather.description
         }}</span>
