--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,20 +1,64 @@
+.actions{
+  display: flex;
+  gap: 30px;
+  align-items: flex-start;
+  justify-content: center;
+  padding: 50px 0;
+  background-color: #cfeeff;
+
+  .toggle-btn{
+    height: 52px;
+  }
+}
+
+.title{
+  margin: 30px 0;
+  text-align: center;
+  font-size: 30px;
+  font-weight: bold;
+}
+
 .wrapper {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
-  margin: 5%;
+  font-family: Bahnschrift, serif;
+  margin: 0 5%;
   gap: 5%;
 
   .card {
     flex: 0 0 20%;
     margin-bottom: 5%;
+    border-radius: 8%;
+    background-color: #cfeeff;
 
     .card-header {
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
+      font-size: 22px;
+
+      .temp {
+        color: #ffa500;
+      }
+    }
+
+    .card-body {
+      display: flex;
+      flex-direction: column;
+      gap: 13px;
+
+      .desc-piece {
+        display: flex;
+        font-size: 16px;
+        align-items: center;
+
+        p{
+          margin: 0;
+        }
+      }
     }
   }
 }
